tests/NormalTests/paczka1/fuzzy1/24389481.err
Error in line 5: bC25 A508 99,55
Error in line 3: gFKGr9K S489 68,5
Error in line 16: gFKGr9K S955 62,5
Error in line 18: A909 A508 73,4
Error in line 26: gFKGr9K A508 8,2
Error in line 23: P8CeI A508 82,0
Error in line 32: P8CeI S489 66,7
Error in line 30: A909 A909 42,2
